--- a/LinkerPlayer/Styles/CircularButton.xaml
+++ b/LinkerPlayer/Styles/CircularButton.xaml
@@ -18,7 +18,7 @@
 
   <Style x:Key="LinkerCircleButton" TargetType="{x:Type ButtonBase}">
     <Setter Property="Background" Value="Transparent" />
-    <Setter Property="BorderBrush" Value="{DynamicResource PlayerControlButtonBorderBrush}" />
+    <Setter Property="BorderBrush" Value="{DynamicResource PlayerControlButtonMouseOverBorderBrush}" />
     <Setter Property="BorderThickness" Value="14" />
     <!--<Setter Property="FocusVisualStyle" Value="{StaticResource LinkerCircleButton.FocusVisualStyle}" />-->
     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -38,7 +38,7 @@
             <Ellipse
               x:Name="Ellipse"
               Stroke="{TemplateBinding BorderBrush}"
-              StrokeThickness="2" />
+              StrokeThickness="3" />
             <ContentPresenter
               x:Name="IconContent"
               Margin="{TemplateBinding Padding}"
@@ -92,7 +92,7 @@
 
     <Style.Triggers>
       <Trigger Property="IsMouseOver" Value="True">
-        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentLightBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentDarkBrush}" />
       </Trigger>
     </Style.Triggers>
 
@@ -105,7 +105,7 @@
     TargetType="{x:Type ToggleButton}">
     <Style.Triggers>
       <Trigger Property="ToggleButton.IsChecked" Value="True">
-        <Setter Property="Foreground" Value="{DynamicResource ControlAccentLightBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlAccentDarkBrush}" />
       </Trigger>
       <Trigger Property="IsEnabled" Value="False">
         <Setter Property="Foreground" Value="Gray" />
