--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -5,6 +5,7 @@
 
   <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
   <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
+  <Color x:Key="MainWindowBorderColor">#3E3E3E</Color>
 
   <Color x:Key="ChildWindowBackgroundColor">#AAAAAA</Color>
 
