--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -1,15 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">Black</Color>
+  <Color x:Key="TitleBarBackgroundColor">#D9D2C2</Color>
 
-  <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
-  <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
+  <Color x:Key="MainWindowGradientStartColor">#D9D2C2</Color>
+  <Color x:Key="MainWindowGradientEndColor">#FDF6E3</Color>
+  <Color x:Key="MainWindowBorderColor">#D9D2C2</Color>
 
   <Color x:Key="ChildWindowBackgroundColor">#CCCCCC</Color>
 
-  <Color x:Key="ControlAccentLightColor">#673AB7</Color>
-  <Color x:Key="ControlAccentDarkColor">#673AB7</Color>
+  <Color x:Key="ControlAccentLightColor">#9B8B4D</Color>
+  <Color x:Key="ControlAccentDarkColor">#B18D00</Color>
   <Color x:Key="ControlForegroundColor">Black</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
   <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
@@ -30,13 +31,13 @@
   <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
   <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-  <Color x:Key="PlaylistTabForegroundColor">Black</Color>
-  <Color x:Key="PlaylistTabBackgroundColor">White</Color>
-  <Color x:Key="PlaylistTabBorderColor">#4F4F4F</Color>
+  <Color x:Key="PlaylistTabForegroundColor">#5A6D75</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">#D2CCB7</Color>
+  <Color x:Key="PlaylistTabBorderColor">#DCD7C1</Color>
   <Color x:Key="PlaylistTabMouseOverForegroundColor">Black</Color>
   <Color x:Key="PlaylistTabMouseOverBackgroundColor">LightGray</Color>
-  <Color x:Key="PlaylistTabSelectedForegroundColor">#6B7B82</Color>
-  <Color x:Key="PlaylistTabSelectedBackgroundColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabSelectedForegroundColor">#333333</Color>
+  <Color x:Key="PlaylistTabSelectedBackgroundColor">#FCF7E3</Color>
 
   <Color x:Key="NewPlaylistButtonForegroundColor">Gray</Color>
   <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
@@ -45,49 +46,49 @@
   <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
   <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">GhostWhite</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">#333333</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">#FCF7E3</Color>
   <Color x:Key="TrackListItemForegroundColor">Black</Color>
-  <Color x:Key="TrackListItemBackgroundAlt1Color">GhostWhite</Color>
-  <Color x:Key="TrackListItemBackgroundAlt2Color">LightGray</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">#FCF7E3</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">#DCD7C1</Color>
   <Color x:Key="TrackListSelectedItemForegroundColor">Black</Color>
-  <Color x:Key="TrackListSelectedItemBackgroundColor">Gray</Color>
+  <Color x:Key="TrackListSelectedItemBackgroundColor">#CBB971</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">Black</Color>
   <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
-  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="TrackListSelectedItemColor">#CBB971</Color>
   <Color x:Key="TrackListTipBackgroundColor">White</Color>
   <Color x:Key="TrackListTipForegroundColor">Black</Color>
 
   <Color x:Key="PlayerForegroundColor">Black</Color>
-  <Color x:Key="PlayerBackgroundColor">WhiteSmoke</Color>
+  <Color x:Key="PlayerBackgroundColor">#D9D2C2</Color>
   <Color x:Key="PlayerActiveColor">DarkGray</Color>
   <Color x:Key="PlayStartGradientColor">White</Color>
   <Color x:Key="PlayEndGradientColor">White</Color>
 
   <Color x:Key="PlayerControlButtonColor">Transparent</Color>
-  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
+  <Color x:Key="PlayerControlButtonBorderColor">#A7A084</Color>
   <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
-  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#CBB971</Color>
 
-  <Color x:Key="MenuForegroundColor">#999999</Color>
-  <Color x:Key="MenuBackgroundColor">#999999</Color>
+  <Color x:Key="MenuForegroundColor">#5A6D75</Color>
+  <Color x:Key="MenuBackgroundColor">#D2CCB7</Color>
   <Color x:Key="MenuDisabledColor">Gray</Color>
   <Color x:Key="MenuTextColor">Gray</Color>
-  <Color x:Key="MenuMouseOverForegroundColor">LightSteelBlue</Color>
-  <Color x:Key="MenuMouseOverBackgroundColor">Black</Color>
-  <Color x:Key="MenuSelectionBackgroundColor">Black</Color>
+  <Color x:Key="MenuMouseOverForegroundColor">#333333</Color>
+  <Color x:Key="MenuMouseOverBackgroundColor">#FCF7E3</Color>
+  <Color x:Key="MenuSelectionBackgroundColor">#9B8B4D</Color>
 
   <Color x:Key="ImageBackgroundColor">White</Color>
 
-  <Color x:Key="ScrollBarTrackColor">#202020</Color>
-  <Color x:Key="ScrollBarThumbColor">#959595</Color>
-  <Color x:Key="ScrollBarArrowForegroundColor">#959595</Color>
+  <Color x:Key="ScrollBarTrackColor">#DBD4C4</Color>
+  <Color x:Key="ScrollBarThumbColor">#CBB971</Color>
+  <Color x:Key="ScrollBarArrowForegroundColor">#CBB971</Color>
   <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
   <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
 
-  <Color x:Key="SpectrumStartColor">#2C086A</Color>
-  <Color x:Key="SpectrumEndColor">Black</Color>
-  <Color x:Key="SpectrumPeakColor">#8950F0</Color>
+  <Color x:Key="SpectrumStartColor">#B18D00</Color>
+  <Color x:Key="SpectrumEndColor">#A7A084</Color>
+  <Color x:Key="SpectrumPeakColor">#CBB971</Color>
 
   <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
   <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
