--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -53,7 +53,7 @@
       <Style TargetType="TextBlock">
         <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
         <Setter Property="FontSize" Value="16" />
-        <Setter Property="Foreground" Value="#FAFAFA" />
+        <Setter Property="Foreground" Value="{DynamicResource ControlForegroundBrush}" />
         <Setter Property="VerticalAlignment" Value="Center" />
       </Style>
 
@@ -159,6 +159,7 @@
           <TextBlock
             Grid.Column="0"
             HorizontalAlignment="Right"
+            Foreground="{DynamicResource ControlForegroundBrush}"
             Text="Color Theme:" />
 
           <ComboBox
@@ -210,15 +211,6 @@
       </StackPanel>
     </Grid>
 
-    <materialDesign:Snackbar
-      Name="InfoSnackbar"
-      Grid.Row="1"
-      HorizontalAlignment="Center"
-      BorderBrush="red"
-      Foreground="#FAFAFA"
-      IsActive="True"
-      MessageQueue="{materialDesign:MessageQueue}" />
-
     <Grid
       Grid.Row="2"
       VerticalAlignment="Bottom"
@@ -226,7 +218,7 @@
       <Button
         Width="100"
         Height="30"
-        Margin="0,7,0,17"
+        Margin="0,10,0,14"
         HorizontalAlignment="Center"
         Click="Save_Click"
         Content="Save"
