--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -3,11 +3,12 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  MouseLeftButtonDown="OnMouseLeftButtonDown"
   d:DesignHeight="40"
   d:DesignWidth="800"
   mc:Ignorable="d">
+
   <UserControl.Resources>
     <Style x:Key="MaximizeMinimizeButton" TargetType="{x:Type Button}">
       <Setter Property="Template">
@@ -57,7 +58,7 @@
 
   </UserControl.Resources>
 
-  <Grid>
+  <Grid Background="{DynamicResource TitleBarBackgroundBrush}">
     <!--<Border Background="{DynamicResource TitleBarBackgroundBrush}" />-->
     <TextBlock
       Margin="15,5,0,0"
