blinker - Removed Padding folder. Removed BrushRepository. Moved SpectrumAnalyzer style to the StylesRepository and removed generic.xaml. Also, removed MahApps.Metro library.

--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -87,8 +87,7 @@
                                      Height=18}"
         Foreground="{DynamicResource TitleBarForegroundBrush}"
         Style="{DynamicResource MaximizeMinimizeButton}"
-        ToolTip="Settings">
-      </Button>
+        ToolTip="Settings" />
 
       <Rectangle
         Width="1"
