--- a/LinkerPlayer/Styles/StylesRepository.xaml
+++ b/LinkerPlayer/Styles/StylesRepository.xaml
@@ -1,4 +1,11 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:audio="clr-namespace:LinkerPlayer.Audio"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:local="clr-namespace:LinkerPlayer"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  mc:Ignorable="d">
 
   <Style x:Key="CustomScrollBarStyle" TargetType="{x:Type ScrollBar}">
     <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -413,6 +420,48 @@
         </Setter>
       </Trigger>
     </Style.Triggers>
+  </Style>
+
+  <!--  Region: SpectrumAnalyzer  -->
+  <LinearGradientBrush x:Key="SpectrumBarBrush" StartPoint="0.5,0" EndPoint="0.5,1">
+    <GradientStop Offset="0" Color="{DynamicResource SpectrumStartColor}" />
+    <GradientStop Offset="1" Color="{DynamicResource SpectrumEndColor}" />
+  </LinearGradientBrush>
+
+  <SolidColorBrush x:Key="SpectrumPeakBrush" Color="{DynamicResource SpectrumPeakColor}" />
+
+  <Style x:Key="SpectrumAnalyzerStyle" TargetType="{x:Type audio:SpectrumAnalyzer}">
+    <Setter Property="BarCount" Value="32" />
+    <Setter Property="BarSpacing" Value="3" />
+    <Setter Property="BarStyle">
+      <Setter.Value>
+        <Style TargetType="{x:Type Rectangle}">
+          <Setter Property="Fill" Value="{StaticResource SpectrumBarBrush}" />
+          <Setter Property="RadiusX" Value="3" />
+          <Setter Property="RadiusY" Value="3" />
+        </Style>
+      </Setter.Value>
+    </Setter>
+    <Setter Property="PeakStyle">
+      <Setter.Value>
+        <Style TargetType="{x:Type Rectangle}">
+          <Setter Property="Fill" Value="{StaticResource SpectrumPeakBrush}" />
+          <Setter Property="RadiusX" Value="3" />
+          <Setter Property="RadiusY" Value="3" />
+        </Style>
+      </Setter.Value>
+    </Setter>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type audio:SpectrumAnalyzer}">
+          <Canvas
+            Name="PART_SpectrumCanvas"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            ClipToBounds="True" />
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
   </Style>
 
 </ResourceDictionary>
