--- a/LinkerPlayer/Styles/CircularButton.xaml
+++ b/LinkerPlayer/Styles/CircularButton.xaml
@@ -18,7 +18,7 @@
 
   <Style x:Key="LinkerCircleButton" TargetType="{x:Type ButtonBase}">
     <Setter Property="Background" Value="Transparent" />
-    <Setter Property="BorderBrush" Value="{DynamicResource PlayerControlButtonMouseOverBorderBrush}" />
+    <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
     <Setter Property="BorderThickness" Value="14" />
     <!--<Setter Property="FocusVisualStyle" Value="{StaticResource LinkerCircleButton.FocusVisualStyle}" />-->
     <Setter Property="HorizontalContentAlignment" Value="Center" />
