--- a/LinkerPlayer/Themes/Blue.xaml
+++ b/LinkerPlayer/Themes/Blue.xaml
@@ -13,8 +13,7 @@
   <Color x:Key="ControlAccentDarkColor">#007AD9</Color>
   <Color x:Key="ControlForegroundColor">White</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
-  <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
-  <Color x:Key="ControlBorderDarkColor">#FF888888</Color>
+  <Color x:Key="ControlBorderColor">#BBBBBB</Color>
   <Color x:Key="ControlMouseOverColor">#00A7FF</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
@@ -64,11 +63,6 @@
   <Color x:Key="PlayerActiveColor">DarkGray</Color>
   <Color x:Key="PlayStartGradientColor">#FFFFFF</Color>
   <Color x:Key="PlayEndGradientColor">#FFFFFF</Color>
-
-  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
-  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
-  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
 
   <Color x:Key="MenuForegroundColor">#334046</Color>
   <Color x:Key="MenuBackgroundColor">#E1E3E4</Color>
