--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -1,25 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">Black</Color>
+  <Color x:Key="TitleBarBackgroundColor">#A9A9A9</Color>
 
-  <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
+  <Color x:Key="MainWindowGradientStartColor">#A9A9A9</Color>
   <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
   <Color x:Key="MainWindowBorderColor">#3E3E3E</Color>
 
   <Color x:Key="ChildWindowBackgroundColor">#AAAAAA</Color>
 
-  <Color x:Key="ControlAccentLightColor">#673AB7</Color>
-  <Color x:Key="ControlAccentDarkColor">#673AB7</Color>
+  <Color x:Key="ControlAccentLightColor">#597080</Color>
+  <Color x:Key="ControlAccentDarkColor">Black</Color>
   <Color x:Key="ControlForegroundColor">White</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
-  <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
-  <Color x:Key="ControlBorderDarkColor">#FF888888</Color>
-  <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
-  <Color x:Key="ControlPressedColor">#FF211AA9</Color>
+  <Color x:Key="ControlBorderColor">Gray</Color>
+  <Color x:Key="ControlMouseOverColor">Black</Color>
+  <Color x:Key="ControlPressedColor">#888888</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
   <Color x:Key="ControlThumbFillColor">Transparent</Color>
-  <Color x:Key="ControlThumbBorderColor">White</Color>
+  <Color x:Key="ControlThumbBorderColor">Gray</Color>
 
   <Color x:Key="DefaultTextColor">Black</Color>
 
@@ -32,12 +31,12 @@
   <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
   <Color x:Key="PlaylistTabForegroundColor">White</Color>
-  <Color x:Key="PlaylistTabBackgroundColor">White</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">DarkGray</Color>
   <Color x:Key="PlaylistTabBorderColor">#4F4F4F</Color>
   <Color x:Key="PlaylistTabMouseOverForegroundColor">White</Color>
   <Color x:Key="PlaylistTabMouseOverBackgroundColor">White</Color>
-  <Color x:Key="PlaylistTabSelectedForegroundColor">#6B7B82</Color>
-  <Color x:Key="PlaylistTabSelectedBackgroundColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabSelectedForegroundColor">black</Color>
+  <Color x:Key="PlaylistTabSelectedBackgroundColor">White</Color>
 
   <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
   <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
@@ -48,11 +47,11 @@
 
   <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
   <Color x:Key="TrackListColumnHeaderBackgroundColor">White</Color>
-  <Color x:Key="TrackListItemForegroundColor">White</Color>
-  <Color x:Key="TrackListItemBackgroundAlt1Color">LightGray</Color>
-  <Color x:Key="TrackListItemBackgroundAlt2Color">DarkGray</Color>
+  <Color x:Key="TrackListItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">#EFEFEF</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">#DEDEDE</Color>
   <Color x:Key="TrackListSelectedItemForegroundColor">White</Color>
-  <Color x:Key="TrackListSelectedItemBackgroundColor">DarkGray</Color>
+  <Color x:Key="TrackListSelectedItemBackgroundColor">#A9A9A9</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">White</Color>
   <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
   <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
@@ -60,18 +59,13 @@
   <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
 
   <Color x:Key="PlayerForegroundColor">Black</Color>
-  <Color x:Key="PlayerBackgroundColor">Gray</Color>
+  <Color x:Key="PlayerBackgroundColor">#A9A9A9</Color>
   <Color x:Key="PlayerActiveColor">DarkGray</Color>
   <Color x:Key="PlayStartGradientColor">#D0D0D0</Color>
   <Color x:Key="PlayEndGradientColor">#EAEAEA</Color>
 
-  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
-  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
-  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
-
-  <Color x:Key="MenuForegroundColor">#999999</Color>
-  <Color x:Key="MenuBackgroundColor">#999999</Color>
+  <Color x:Key="MenuForegroundColor">Black</Color>
+  <Color x:Key="MenuBackgroundColor">#DEDEDE</Color>
   <Color x:Key="MenuDisabledColor">Gray</Color>
   <Color x:Key="MenuTextColor">Gray</Color>
   <Color x:Key="MenuMouseOverForegroundColor">LightSteelBlue</Color>
@@ -80,15 +74,15 @@
 
   <Color x:Key="ImageBackgroundColor">White</Color>
 
-  <Color x:Key="ScrollBarTrackColor">#202020</Color>
+  <Color x:Key="ScrollBarTrackColor">#DEDEDE</Color>
   <Color x:Key="ScrollBarThumbColor">#959595</Color>
   <Color x:Key="ScrollBarArrowForegroundColor">#959595</Color>
   <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
   <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
 
-  <Color x:Key="SpectrumStartColor">#2C086A</Color>
+  <Color x:Key="SpectrumStartColor">#A9A9A9</Color>
   <Color x:Key="SpectrumEndColor">Black</Color>
-  <Color x:Key="SpectrumPeakColor">#8950F0</Color>
+  <Color x:Key="SpectrumPeakColor">#A9A9A9</Color>
 
   <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
   <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
