--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -13,8 +13,7 @@
   <Color x:Key="ControlAccentDarkColor">#B18D00</Color>
   <Color x:Key="ControlForegroundColor">#505050</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
-  <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
-  <Color x:Key="ControlBorderDarkColor">#FF888888</Color>
+  <Color x:Key="ControlBorderColor">#A7A084</Color>
   <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
@@ -64,11 +63,6 @@
   <Color x:Key="PlayerActiveColor">DarkGray</Color>
   <Color x:Key="PlayStartGradientColor">White</Color>
   <Color x:Key="PlayEndGradientColor">White</Color>
-
-  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
-  <Color x:Key="PlayerControlButtonBorderColor">#A7A084</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
-  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#CBB971</Color>
 
   <Color x:Key="MenuForegroundColor">#505050</Color>
   <Color x:Key="MenuBackgroundColor">#FCF7E3</Color>
