--- a/LinkerPlayer/Themes/Midnight.xaml
+++ b/LinkerPlayer/Themes/Midnight.xaml
@@ -13,8 +13,7 @@
   <Color x:Key="ControlAccentDarkColor">#673AB7</Color>
   <Color x:Key="ControlForegroundColor">White</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
-  <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
-  <Color x:Key="ControlBorderDarkColor">#FF888888</Color>
+  <Color x:Key="ControlBorderColor">#BBBBBB</Color>
   <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
@@ -65,14 +64,9 @@
   <Color x:Key="PlayStartGradientColor">#090909</Color>
   <Color x:Key="PlayEndGradientColor">#202020</Color>
 
-  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
-  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
-  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
-
   <Color x:Key="MenuForegroundColor">#CCCCCC</Color>
   <Color x:Key="MenuBackgroundColor">#252525</Color>
-  <Color x:Key="MenuDisabledColor">#808080</Color>
+  <Color x:Key="MenuDisabledColor">Gray</Color>
   <Color x:Key="MenuMouseOverForegroundColor">#CCCCCC</Color>
   <Color x:Key="MenuMouseOverBackgroundColor">#2C086A</Color>
   <Color x:Key="MenuSelectionForegroundColor">#CCCCCC</Color>
