--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -220,8 +220,8 @@
         Height="30"
         Margin="0,10,0,14"
         HorizontalAlignment="Center"
-        Click="Save_Click"
-        Content="Save"
+        Click="Close_Click"
+        Content="Close"
         FontSize="18"
         FontWeight="Light"
         Foreground="{DynamicResource ControlForegroundBrush}"
