blinker - enabled double-click maximize on the Titlebar.

--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -8,6 +8,7 @@
   d:DesignHeight="40"
   d:DesignWidth="800"
   MouseLeftButtonDown="OnMouseLeftButtonDown"
+  MouseDoubleClick="TitlebarButtons_OnMouseDoubleClick"
   mc:Ignorable="d">
 
   <UserControl.Resources>
