--- a/LinkerPlayer/Styles/EqVerticalSlider.xaml
+++ b/LinkerPlayer/Styles/EqVerticalSlider.xaml
@@ -89,7 +89,8 @@
             Width="12"
             Height="12"
             Fill="Transparent"
-            Stroke="{DynamicResource ControlBorderBrush}" />
+            Stroke="{DynamicResource ControlBorderBrush}"
+            StrokeThickness="2" />
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
               <Setter TargetName="Ellipse" Property="Stroke" Value="{DynamicResource ControlAccentLightBrush}" />
