--- a/LinkerPlayer/Styles/HorizontalSlider.xaml
+++ b/LinkerPlayer/Styles/HorizontalSlider.xaml
@@ -49,7 +49,8 @@
             Width="18"
             Height="18"
             Fill="Transparent"
-            Stroke="{DynamicResource ControlBorderBrush}" />
+            Stroke="{DynamicResource ControlBorderBrush}"
+            StrokeThickness="2" />
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
               <Setter TargetName="Ellipse" Property="Stroke" Value="{DynamicResource ControlAccentDarkBrush}" />
