--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -16,10 +16,12 @@
   BorderThickness="1"
   Closing="Window_Closing"
   CornerPreference="DoNotRound"
-  GlassFrameThickness="5"
+  GlassFrameThickness="0"
   Icon="/Images/app64.ico"
+  KeepBorderOnMaximize="True"
   Loaded="Window_Loaded"
   ResizeBorderThickness="5"
+  ResizeMode="CanResize"
   StateChanged="Window_StateChanged"
   TextElement.FontSize="14"
   TextElement.FontWeight="Medium"
